# satellite-task-selector

./: .pre-commit-config.yaml  .pre-commit-config.yml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.code_quality/: .flake8  .mypy.ini  .pylintrc  .pyproject_black.toml
app/: buffer.py  config.py  exceptions.py  main.py  models.py  processor.py  routers.py  selector.py
logging/: filebeat.yml
monitoring/: datasource.yml  fastapi-dashboard.json  prometheus.yml
tests/: data.py  test_task_selector.py
