[tool.poetry]
name = "satellite-task-selector"
version = "0.1.0"
description = "An API to select satellite tasks"
authors = ["Franco Camporeale <camporeale@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.1.2"
fastapi = "^0.79.0"
numpy = "^1.23.1"
redis = "^4.3.4"
uvicorn = "^0.18.2"
loguru = "^0.6.0"
prometheus-fastapi-instrumentator = "^5.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
